# facechanger-android

./: README.md  index.html
FaceChanger/: build.gradle
FaceChanger/app/: build.gradle  proguard-rules.pro
FaceChanger/app/src/androidTest/java/com/meganvanwelie/facechanger/: ExampleInstrumentedTest.java
FaceChanger/app/src/main/: AndroidManifest.xml
FaceChanger/app/src/main/cpp/: native-lib.cpp
FaceChanger/app/src/main/java/com/meganvanwelie/facechanger/: CameraFragment.java  CameraHelper.java  CameraTextureView.java  FaceChanger.java
FaceChanger/app/src/main/res/layout/: activity_face_changer.xml  fragment_camera.xml
FaceChanger/app/src/main/res/values/: strings.xml
FaceChanger/app/src/test/java/com/meganvanwelie/facechanger/: ExampleUnitTest.java
css/: main.css
native/: CMakeLists.txt  characterization.cpp  characterization.hpp  face_changer.cpp  face_changer.hpp  main.cpp
native/docs/: index.html
